@@ -18,3 +18,10 @@ class WrappedSQLScopedProject < ActiveRecord::Base
   set_table_name :projects
   acts_as_ordered :order => 'name', :scope => 'category_id = #{category_id}', :wrap => true
 end
+
+class ProjectOrderedByCategory < ActiveRecord::Base
+  belongs_to :category
+  set_table_name :projects
+  acts_as_ordered :order => 'categories.name, projects.id DESC', :joins => :category
+end
+
