@@ -1,3 +1,7 @@
+[16 May 2008]
+
+* Add :joins option.
+
 [28 September 2007]
 
 * Refactoring.
